@@ -23,7 +23,7 @@ function et_add_page() {
   $output = theme('node_add_list', array('content' => $content));
 
   // Need to check and see if output is empty so we can change the help message sent to the user.
-  if (strpos($output,'You have not created any content types yet') != FALSE) {
+  if (is_string($output) && strpos($output,'You have not created any content types yet') != FALSE) {
     $output = '<p>You have not created any Embed Template types yet. Please refer to the module\'s readme file or <a href="https://www.drupal.org/project/embed_templates">instructions the module listing page</a> in order to create a template type.</p>';
   }
   return $output;
