@@ -4,9 +4,9 @@ core = 7.x
 package = Embed Templates
 dependencies[] = embed_templates
 
-; Information added by Drupal.org packaging script on 2017-07-17
-version = "7.x-1.0-beta3+3-dev"
+; Information added by Drupal.org packaging script on 2017-07-21
+version = "7.x-1.0-beta3+6-dev"
 core = "7.x"
 project = "embed_templates"
-datestamp = "1500306844"
+datestamp = "1500676166"
 
