@@ -12,9 +12,9 @@ dependencies[] = et_page_top_bottom
 dependencies[] = et_tracking_pixels
 
 
-; Information added by Drupal.org packaging script on 2017-07-17
-version = "7.x-1.0-beta3+3-dev"
+; Information added by Drupal.org packaging script on 2017-07-21
+version = "7.x-1.0-beta3+6-dev"
 core = "7.x"
 project = "embed_templates"
-datestamp = "1500306844"
+datestamp = "1500676166"
 
