@@ -2,6 +2,8 @@
 user_external_invite 7.x-1.x-dev
 ==================
 
+Issue #2896317 by afinnarn: Embed Template Beans Do Not Update
+Issue #2895736 by afinnarn: $output in et_add_page() is an array and not a string
 Issue #2895398 by afinnarn: Don't Log 404 In Page Top/Bottom
 Issue #2881193 by afinnarn: Check Bean Edit Form On Inline Entity Forms
 
